<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_backgraund"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="149dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/welcome"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/elements_standard_margin"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/elements_standard_margin"
            android:layout_weight="10"
            android:autofillHints="enter_e_mail"
            android:ellipsize="end"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="20dp"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/mainTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/elements_standard_margin"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/elements_standard_margin"
            android:layout_weight="10"
            android:autofillHints="@string/enter_password"
            android:ellipsize="end"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="20dp"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/mainTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="?colorPrimary"
            android:text="@string/enter"
            app:cornerRadius="25dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>